09-kub-ingressRoute-provider-https/vault-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
spec:
  ports:
    - port: 8200
      targetPort: 8200
  selector:
    app: vault
