09-kub-ingressRoute-provider-https/vault-ingress-route-secure.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault-route-secure
  namespace: vault
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`vault.isc`)
    kind: Rule
    services:
    - name: vault
      namespace: vault
      port: 8200
